# SnoopyOnSecurity

./: README.md  harden.ps1
DaisyHill/: aaugh.ps1  procMOGGED.ps1
DaisyHill/KiteEatingTree/: inventory.ini  main.yaml  setup.ps1
DaisyHill/Olaf/: json.vrl  otel-config.yaml  otel.ps1  sysmon.xml
DaisyHill/RedBaron/src/: yara.rs
GoodRedBaron/: Cargo.toml  windows-yara.tar.xz
GoodRedBaron/.cargo/: config.toml
GoodRedBaron/src/: main.rs  notifications.rs  yara.rs
GreatPumpkin/: greatPumpkin.py
Linux_Misc/: hosts.json  hosts2.json  lin.sh  rover.py
Lucy/: README.md
Lucy/football/: network.yaml  processes.yaml
Lucy/football/files/: allowpolicy.yaml  readonly-bins.yaml  readonly-general.yaml  readonly-web.yaml
Lucy/football/syscalls/: syscall.yaml
Marbles/: Dockerfile.sandbox  Makefile  analysis_results.json  c2_pb2.py  c2_pb2_grpc.py  dns_pb2.py  dns_pb2_grpc.py  eldritch_pb2.py  eldritch_pb2_grpc.py  portal_pb2.py  portal_pb2_grpc.py  requirements.txt  sandbox_analyzer.py  setup.py
Marbles/keyhook/: Makefile  README.md  keyhook.c
PeppermintPatty/: peppermint_patty_debian.sh  peppermint_patty_rhel.sh  peppermint_patty_ubuntu.sh
Pigpen/: pigpen.sh
RedBaron/: build.sh
RedBaron/installer/: setup.go
RedBaron/rule_engine2/rulesV2/: execution_empire_stager_execution.toml  execution_from_suspicious_location.toml
RedBaron2/: .dockerignore  Cargo.toml  Dockerfile  build.sh  flake.nix
RedBaron2/.github/: dependabot.yml
RedBaron2/.github/workflows/: build.yml
RedBaron2/asciicastlib/: Cargo.toml
RedBaron2/asciicastlib/src/: lib.rs
RedBaron2/flying-ace-engine/: Cargo.toml  README.md
RedBaron2/flying-ace-engine/benches/: engine.rs
RedBaron2/flying-ace-engine/rules/: ansible.yaml  bash_base64_exec.yaml  bash_c.yaml  compilation.yaml  curl_pipe_bash.yaml  curl_wget_download.yaml  dd_usage.yaml  histfile_removal.yaml  interact_lkm.yaml  linux_hack_tool.yaml  ncat_revshell.yaml  process_from_mem.yaml  python_revshell.yaml  removed.txt  rm_rf_nopreserve.yaml  root_ssh_login.yaml  sigma_apt_shell_execution.yaml  sigma_at_command.yaml  sigma_auditctl_clear_rules.yaml  sigma_av_kaspersky_av_disabled.yaml  sigma_awk_shell_spawn.yaml  sigma_base64_decode.yaml  sigma_base64_execution.yaml  sigma_base64_shebang_cli.yaml  sigma_bash_interactive_shell.yaml  sigma_bpf_kprob_tracing_enabled.yaml  sigma_bpftrace_unsafe_option_usage.yaml  sigma_cap_setgid.yaml  sigma_cap_setuid.yaml  sigma_capa_discovery.yaml  sigma_capsh_shell_invocation.yaml  sigma_chattr_immutable_removal.yaml  sigma_chroot_execution.yaml  sigma_clear_logs.yaml  sigma_clear_syslog.yaml  sigma_clipboard_collection.yaml  sigma_cp_passwd_or_shadow_tmp.yaml  sigma_crontab_enumeration.yaml  sigma_crontab_removal.yaml  sigma_curl_usage.yaml  (+101 more)
RedBaron2/flying-ace-engine/scripts/: sigma_to_rhai.py
RedBaron2/flying-ace-engine/src/: lib.rs
RedBaron2/flying-ace-engine/tests/: engine.rs
RedBaron2/rb2-ebpf/: Makefile  Makefile.vars  firewall_events.bpf.c  nfq_firewall.bpf.c  process_start.bpf.c  tty_view.bpf.c  vmlinux.h
RedBaron2/rb2-userspace/: Cargo.toml  build.rs
RedBaron2/rb2-userspace/src/: lib.rs  log_file.rs  main.rs
RedBaron2/rb2-userspace/src/btf/: fetch_btf.rs  mod.rs
RedBaron2/rb2-userspace/src/config/: dropper.rs  logger.rs  mod.rs  systemd.rs  yaml.rs
RedBaron2/rb2-userspace/src/firewall/: common.rs  dispatcher.rs  mod.rs  sockets.rs
RedBaron2/rb2-userspace/src/firewall/event/: auditd.rs  ebpf.rs  mod.rs  nfq.rs
RedBaron2/rb2-userspace/src/firewall/handler/: kill.rs  mod.rs  nfq.rs
RedBaron2/rb2-userspace/src/ingest/: mod.rs  openobserve.rs  reader.rs
RedBaron2/rb2-userspace/src/integrity/: apk.rs  dpkg.rs  mod.rs  pacman.rs  rpm.rs
RedBaron2/rb2-userspace/src/misc/: bpf.rs  host.rs  kmsg.rs  lkm.rs  log.rs  mod.rs  preload.rs  scans.rs  walk.rs
RedBaron2/rb2-userspace/src/process/: helper.rs  mod.rs  process_monitor.rs
RedBaron2/rb2-userspace/src/tty/: cast_writer.rs  ebpf.rs  encrypt.rs  mod.rs  object_storage.rs  s3_forward.rs  session.rs  sqlite_store.rs
RedBaron2/rb2-userspace/src/yara/: fanotify.rs  helper.rs  mod.rs  s3_samples.rs  yara_scan.rs
RedBaron2/rb2-web-gui/: go.mod  go.sum
RedBaron2/rb2-web-gui/cmd/server/: main.go
RedBaron2/rb2-web-gui/internal/castutil/: castutil.go
RedBaron2/rb2-web-gui/internal/decrypt/: decrypt.go
RedBaron2/rb2-web-gui/internal/models/: session.go
RedBaron2/rb2-web-gui/internal/s3client/: s3client.go
RedBaron2/rb2-web-gui/internal/server/: server.go
RedBaron2/rb2-web-gui/internal/store/: store.go
RedBaron2/release/: note.txt  rb2.sha256
RedBaron2/release_builds/: note.txt  rb2.sha256
RedBaron2/yara_linux/: linux.tar.xz
Spike/: go.mod  main.go  spike  spike_arm64_linux
Windows_Misc/: harden.ps1  restore.ps1  soft.ps1
Woodstock/: ansible.cfg  backup.yml  bootstrap.yml  continual.yml  copy_zip.go  fetch_rb2_logs.yml  first_pass.yml  go.mod  go.sum  requirements.txt  restart_rb2.yml  spray.go  ssm_uninstall.yml
Woodstock/group_vars/: all.yml
Woodstock/roles/auditd/files/: audit.rules
Woodstock/roles/auditd/handlers/: main.yml
Woodstock/roles/auditd/tasks/: main.yml
Woodstock/roles/auditd/templates/: 00-ccdc-excludes.rules.j2  ccdc-execve.rules.j2
Woodstock/roles/auditd/vars/: main.yml
Woodstock/roles/backup_jumphost/tasks/: main.yml
Woodstock/roles/backup_jumphost/vars/: main.yml
Woodstock/roles/change_passwords/tasks/: main.yml
Woodstock/roles/cron_cleanup/defaults/: main.yml
Woodstock/roles/cron_cleanup/tasks/: main.yml
Woodstock/roles/install_core/tasks/: main.yml
Woodstock/roles/install_core/vars/: main.yml
Woodstock/roles/install_vector/tasks/: main.yml
Woodstock/roles/install_vector/templates/: vector.service.j2  vector.yml.j2
Woodstock/roles/install_vector/vars/: main.yml
Woodstock/roles/log_cleanup/defaults/: main.yml
Woodstock/roles/log_cleanup/tasks/: main.yml
Woodstock/roles/redbaron_install/defaults/: main.yml
Woodstock/roles/redbaron_install/handlers/: main.yml
Woodstock/roles/redbaron_install/tasks/: main.yml
(+10 files in other folders)
