[package]
name = "redbaron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.42"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "color"] }
log = "0.4.27"
rust-embed = { version = "8.7.2", features = ["compression", "include-exclude"] }
windows = { version = "0.61.1", features = ["Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
yara-x = "1.0.1"
