[package]
name = "flying-ace-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"
rhai = { version = "1.23.6", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_with = "3.16.1"
serde_yaml = "0.9.34" # XXX: this is deprecated

[dev-dependencies]
criterion = "0.8" # benchmarking dep

[[bench]]
name = "engine"
harness = false
